# GS3-ICL

./: .gitignore  LICENSE  README.md  __init__.py  audio.py  data.py  model.py  paths.py  pyproject.toml  setup.py  train.py  training.py
dataset/: README.md
gs3_icl/: __init__.py
scripts/: extract_features.sh  extract_meld_features.py
